ci: Improve maven-surefire-plugin
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>